2012-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLPrivate.h: Add comments on owner policy.
	* Source/NSXMLNode.m (-XMLStringWithOptions:): Reimplement to
	allow closer control over output.
	* Source/NSXMLDocument.m (-XMLStringWithOptions:): Remove this method.

2012-03-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLPrivate.h:
	* Source/NSXMLNode.m:
	* Source/NSXMLElement.m:
	Fixups to get the code to build on CentOS/RedHat linux.

2012-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-detach): Don't handle the namespace case.
	* Source/NSXMLElement.m (-removeNamespaceForPrefix:): Implement.
	* Tests/base/NSXMLNode/basic.m: Move tests from here ...
	* Tests/base/NSXMLElement/basic.m: ... to here.

2012-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLElement.m: Correct used namespace field.
	* Source/NSXMLNode.m: Implement special handling for namespace nodes.
	* Tests/base/NSXMLNode/basic.m: Correct method name for namespace node.

2012-03-11  Richard Frith-Macdonald & Fred Kiefer

	* Source/NSXMLNamespace.m:
	* Source/GNUmakefile:
	* Source/NSXMLPrivate.h:
	* Source/NSXMLNode.m:
	Revert most of my last change in favour of Fred's changes.

2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLNamespace.m: New class for namespaces
	* Source/GNUmakefile: Build with new class
	* Source/NSXMLDocument.m:
	* Source/NSXMLPrivate.h:
	* Source/NSXMLDTD.m:
	* Source/NSXMLNode.m:
	* Source/NSXMLDTDNode.m:
	* Source/NSXMLElement.m:
	Use a new class for namespaces ... just a placeholder/skeleton so far.
	Change other classes to know the correct type of their 'node' pointer.

2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLNode.m: Avoid crash when trying to get the parent of a
	namespace ... namespaces don't have parents and in fact have a
	completely different in-memory layout to other 'node' types.

2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m:
	* Source/GSHTTPURLHandle.m: